# Inquiry-Spring

./: .gitignore  db.sqlite3  pyproject.toml  test_ai_service.py
apps/ai_services/: apps.py  llm_client.py  models.py  prompt_manager.py  rag_engine.py
apps/chat/: apps.py
apps/quiz/: views.py
backend/: .env  AI_SERVICES_QUIZ_ROUTE.md  BACKEND_README.md  analyze_results.py  debug_quiz_options.py  diagnose_rag_failure.py  evaluate_rag_systems.py  evaluation_data.json  init_backend.py  install_deps.bat  install_deps.py  manage.py  requirements.txt  test_403_debug.py  test_all_question_types.py  test_analysis_fix.py  test_frontend_fix.py  test_options_fix.py  test_rag_fix.py  test_rewritten_quiz.py
backend/config/: neo4j.env  neo4j.env.example
backend/debug_logs/: document_quiz_fallback_20250616_111932.json  normal_quiz_20250616_111924.json  normal_quiz_20250616_112953.json
backend/inquiryspring_backend/: db.sqlite3  middleware.py  serializers.py  settings.py  urls.py  utils.py
docs/: system_design.md
inquiryspring-front/: package-lock.json
vector_store/10/: chroma.sqlite3
vector_store/11/: chroma.sqlite3
vector_store/12/: chroma.sqlite3
vector_store/13/: chroma.sqlite3
vector_store/14/: chroma.sqlite3
vector_store/15/: chroma.sqlite3
vector_store/16/: chroma.sqlite3
vector_store/17/: chroma.sqlite3
vector_store/18/: chroma.sqlite3
vector_store/19/: chroma.sqlite3
vector_store/2/: chroma.sqlite3
vector_store/3/: chroma.sqlite3
vector_store/4/: chroma.sqlite3
vector_store/5/: chroma.sqlite3
vector_store/6/: chroma.sqlite3
(+64 files in other folders)
